# ubr_reloaded

./: README.md
ansible/: README.md  inventory  ubr_foxy.yml  ubr_humble.yml  ubr_iron.yml  ubr_ros1.yml  ubr_ros2.yml
docker/: Dockerfile  README.md  ros_entrypoint.sh
ubr1_bringup/: CMakeLists.txt  package.xml
ubr1_bringup/config/: default_controllers.yaml  drivers.yaml  fixed_lag_smoother.yaml  head_camera_driver.yaml
ubr1_bringup/launch/: head_camera.launch.py  robot.launch  robot.launch.py
ubr1_bringup/launch/include/: base_laser.launch.xml  head_camera.launch.xml
ubr1_bringup/scripts/: controller_reset.py  profile_base.py
ubr1_calibration/: CMakeLists.txt  package.xml
ubr1_calibration/config/: calibrate.yaml  calibrate_with_ground.yaml  calibration_poses.yaml  capture.yaml  capture_with_ground.yaml
ubr1_calibration/config/checkerboard_2d/: calibrate.yaml  capture.yaml
ubr1_calibration/launch/: calibrate_launch.py  capture.launch  capture_with_ground.launch
ubr1_calibration/scripts/: calibrate_from_bag  calibrate_launch.py  manual_calibration  robot_calibration
ubr1_calibration/scripts/checkerboard_2d/: checkerboard_2d_manually
ubr1_demo/: CMakeLists.txt  package.xml  setup.py
ubr1_demo/include/ubr1_demo/: generate_grasps_from_msg.hpp  pick_place_task.hpp
ubr1_demo/launch/: pick_place.launch.py  simple_grasping.launch.py
ubr1_demo/scripts/: move_my_base.py  move_my_head.py  move_my_torso.py  tuck_my_arm.py
ubr1_demo/src/: generate_grasps_from_msg.cpp  pick_and_place.cpp  pick_place_task.cpp
ubr1_description/: CMakeLists.txt  package.xml
ubr1_description/meshes/: base_laser_link.STL  base_link_col.STL  bellows_link.STL  bellows_link_col.STL  elbow_flex_link.STL  estop_link.STL  fixed_torso_link.STL  forearm_roll_link.STL  forearm_roll_link_col.STL  gripper_link.STL  head_camera_link.STL  head_pan_link.STL  head_tilt_link.STL  left_wheel_link.STL  right_gripper_finger_link.STL  right_wheel_link.STL  shoulder_lift_link.STL  shoulder_lift_link_col.STL  shoulder_pan_link.STL  shoulder_pan_link_col.STL  torso_lift_link_col.STL  upperarm_roll_link.STL  upperarm_roll_link_col.STL  wrist_flex_link.STL
ubr1_description/robots/: ubr1_robot.urdf
ubr1_gazebo/: CMakeLists.txt  package.xml  ubr1_gazebo_controllers.xml
ubr1_gazebo/config/: default_controllers.yaml
ubr1_gazebo/include/ubr1_gazebo/: controller_manager.h  joint_handle.h  simulated_bellows_controller.h  simulated_gripper_controller.h  ubr1_gazebo_plugin.h
ubr1_gazebo/launch/: simulation.launch  simulation_grasping.launch  simulation_home.launch
ubr1_gazebo/launch/include/: head_camera.launch.xml  simulated_teleop.launch.xml  simulation.ubr1.xml
ubr1_gazebo/models/table_30/: model.config  table.sdf
ubr1_gazebo/models/ubr_cube/: model.config  ubr_cube.sdf
ubr1_gazebo/robots/: ubr1_robot.urdf.xacro
ubr1_gazebo/scripts/: reset_robot.py  stop_controllers.py
ubr1_gazebo/src/: simulated_bellows_controller.cpp  simulated_gripper_controller.cpp  ubr1_gazebo_plugin.cpp
ubr1_gazebo/test/: pick_up_cube_test.launch  pick_up_cube_test.py  pick_up_cube_trajectories.bag
ubr1_gazebo/test/scripts/: generate_grasp_test.py
ubr1_gazebo/worlds/: cube_on_ground.sdf  cube_on_table.sdf  home.sdf
ubr1_grasping/: CMakeLists.txt  package.xml
ubr1_grasping/include/ubr1_grasping/: cloud_tools.h  object_support_segmentation.h  shape_extraction.h  shape_grasp_planner.h
ubr1_grasping/launch/: grasping.launch
ubr1_grasping/scripts/: pick_and_place.py  tuck_arm.py
ubr1_grasping/src/: basic_grasping_perception.cpp  cloud_tools.cpp  object_support_segmentation.cpp  shape_extraction.cpp  shape_grasp_planner.cpp
ubr1_grasping/src/ubr1_grasping/: graspable_search.py  visualization.py
ubr1_grasping/test/: CMakeLists.txt  test_shape_extraction.cpp
ubr1_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ubr1_moveit/config/: controllers.yaml  fake_controllers.yaml  initial_positions.yaml  sensors.yaml  (+10 more)
ubr1_navigation/: CMakeLists.txt  costmap_plugins.xml  package.xml
ubr1_navigation/behavior_trees/: default.xml
ubr1_navigation/config/: base_local_planner.yaml  costmap_common.yaml  costmap_local.yaml  mapper_params_online_sync.yaml  move_base.yaml  nav2_params.yaml  navigation.rviz
ubr1_navigation/include/ubr1_navigation/: depth_layer.hpp
ubr1_navigation/launch/: build_map.launch  build_map.launch.py  localization.launch.py  navigate.launch  navigation.launch.py
ubr1_navigation/launch/includes/: amcl.launch.xml  move_base.launch.xml
ubr1_navigation/maps/: home.pgm  home.yaml  map.pgm  map.yaml  map_1728569604.pgm  map_1728569604.yaml  map_with_arena.pgm  map_with_arena.yaml
ubr1_navigation/scripts/: tilt_head.py
ubr1_navigation/src/: depth_layer.cpp
ubr1_navigation/srv/: TiltControl.srv
ubr_controllers/: CMakeLists.txt  package.xml  ubr_controllers.xml
ubr_controllers/include/ubr_controllers/: base_controller.h  cartesian_pose.h  cartesian_twist.h  cartesian_wrench.h  controller.h  controller_manager.h  follow_joint_trajectory.h  gravity_compensation.h  joint_handle.h  pid.h  point_head.h  simulated_bellows_controller.h  simulated_gripper_controller.h  trajectory.h  trajectory_spline_sampler.h
ubr_controllers/scripts/: controller_analysis.py  profile_trajectory_joint.py
ubr_controllers/src/: base_controller.cpp  cartesian_pose.cpp  cartesian_twist.cpp  cartesian_wrench.cpp  follow_joint_trajectory.cpp  gravity_compensation.cpp  pid.cpp  point_head.cpp  simulated_bellows_controller.cpp  simulated_gripper_controller.cpp
ubr_msgs/: CMakeLists.txt  package.xml
ubr_msgs/msg/: BoardInfo.msg  BreakerInfo.msg  BreakerState.msg  ChargerInfo.msg  ControllerInfo.msg  DebugInfo.msg  JointInfo.msg  MotorInfo.msg  RobotState.msg
ubr_msgs/srv/: BreakerCommand.srv  UpdateControllers.srv
ubr_teleop/: CMakeLists.txt  package.xml
ubr_teleop/include/ubr_teleop/: robot_controller.h
ubr_teleop/launch/: ubr_teleop.launch.xml
ubr_teleop/scripts/: set_gripper_pose.py  set_head_pose.py  set_torso_pose.py  tuck_arm.py
ubr_teleop/src/: joystick_teleop.cpp  keyboard_teleop.cpp
(+41 files in other folders)
