<?xml version="1.0"?>
<package format="2">

  <name>ubr1_bringup</name>
  <version>0.3.0</version>
  <description>
    Launch Files for UBR-1.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/ubr1_bringup</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>graft</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>openni2_camera</exec_depend>
  <exec_depend>openni2_launch</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>ubr1_description</exec_depend>
  <exec_depend>urg_node</exec_depend>

</package>
