<package>
  <name>ubr1_description</name>
  <version>0.3.0</version>
  <description>
    URDF for UBR-1.
  </description>
  <author>Michael Ferguson</author>
  <author>Melonee Wise</author>
  <maintainer email="fergs@unboundedrobotics.com">Michael Ferguson</maintainer>
  <license>All Rights Reserved</license>
  <url>http://ros.org/wiki/ubr1_description</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>urdf</run_depend>
</package>
