<package>
  <name>ubr1_gazebo</name>
  <version>0.3.0</version>
  <description>
    Gazebo package for the UBR-1.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="fergs@unboundedrobotics.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/ubr1_gazebo</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>control_toolbox</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>ubr_controllers</build_depend>

  <run_depend>control_toolbox</run_depend>
  <run_depend>depth_image_proc</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>image_proc</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>ubr_controllers</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <ubr_controllers plugin="${prefix}/ubr1_gazebo_controllers.xml"/>
  </export>
</package>
