<?xml version="1.0"?>
<package format="2">

  <name>ubr1_gazebo</name>
  <version>0.3.0</version>
  <description>
    Gazebo package for the UBR-1.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/ubr1_gazebo</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>control_toolbox</depend>
  <depend>gazebo_ros</depend>
  <depend>robot_controllers</depend>
  <depend>robot_controllers_interface</depend>

  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <robot_controllers plugin="${prefix}/ubr1_gazebo_controllers.xml"/>
  </export>

</package>
