<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>ubr1_gazebo</name>
  <version>0.3.0</version>
  <description>
    Gazebo package for the UBR-1.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/ubr1_gazebo</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>angles</depend>
  <depend>control_toolbox</depend>
  <!-- using ROS2 fortress -->
  <depend>ignition-gazebo6</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>ros_gz</depend>
  <depend>robot_controllers</depend>
  <depend>robot_controllers_interface</depend>
  <depend>simple_actions</depend>

  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <robot_controllers plugin="${prefix}/ubr1_gazebo_controllers.xml"/>
  </export>

</package>
