<?xml version="1.0"?>
<package format="2">

  <name>ubr1_grasping</name>
  <version>0.3.0</version>
  <description>
    Basic grasping applications and demos for the UBR-1 robot.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/ubr1_grasping</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>

  <depend>actionlib</depend>
  <depend>geometry_msgs</depend>
  <depend>grasping_msgs</depend>
  <depend>moveit_python</depend> <!-- for demos -->
  <depend>moveit_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>tf</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
