<?xml version="1.0"?>
<package format="2">

  <name>ubr1_navigation</name>
  <version>0.3.0</version>
  <description>Configuration and launch files for UBR-1 using ROS navigation</description>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <author>Michael Ferguson</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>navigation</exec_depend>

</package>
