<?xml version="1.0"?>
<package format="2">

  <name>ubr1_navigation</name>
  <version>0.3.0</version>
  <description>Configuration and launch files for UBR-1 using ROS navigation</description>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <author>Michael Ferguson</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>image_transport</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>python3-transforms3d</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
