<?xml version="1.0"?>
<package format="2">

  <name>ubr_msgs</name>
  <version>0.3.0</version>
  <description>
    Messages and Services definitions for Unbounded Robotics.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/ubr_msgs</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
