<?xml version="1.0"?>
<package format="2">

  <name>ubr_teleop</name>
  <version>0.3.0</version>
  <description>
    Teleoperation for the robot.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/ubr_teleop</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>topic_tools</depend>

</package>
